Correccion de errores

--- a/TPE5-diazpace_molleker_lucero/html/actualizar-plan.html
+++ b/TPE5-diazpace_molleker_lucero/html/actualizar-plan.html
@@ -16,20 +16,11 @@
         <a href="home.html" class="logo-navigation"></a>
         
         <input type="text" placeholder="  Buscar..." class="search">
-<<<<<<< HEAD
         <section class="container-links">
             <a class="links">Mi Playlist</a>
             <a class="links" href="notificaciones.html">Notificaciones</a>
             <a class="links" href="ayuda.html" ><div class="notificacion"></div></a>
         </section>
-=======
-        <a href="buscado.html"><div class="lupa"></div></a>
-
-        <a class="links margen" href="playlist.html"><div >Mi Playlist</div></a>
-        <a class="links" href="mi-cuenta.html" >Mi cuenta</a>
-        <a class="links" href="ayuda.html" >Ayuda</a>
-        <a class="links" href="notificaciones.html"><div class="notificacion"></div></a>
->>>>>>> 84f6cb9d4fc987343ec7464005c5c688a995a595
     </header>
 
 
@@ -41,13 +32,13 @@
             <p id="texto-plan"> Tu plan actual es: </p> <input id="tu-plan-es" type="text" placeholder="FREE">
         </div>
         <section class="planes">
-            <div class="plan1"><a href="registrarse.html" class="btn-plan"><button class="btn-plan inicio-sesion">Seleccionar plan</a></button>
+            <div class="plan1"><a href="home.html" class="btn-plan"><button class="btn-plan inicio-sesion">Seleccionar plan</a></button>
             </div>
-            <div class="plan2"><a href="registrarse.html" class="btn-plan"><button class="btn-plan inicio-sesion">Seleccionar plan</a></button>
+            <div class="plan2"><a href="home.html" class="btn-plan"><button class="btn-plan inicio-sesion">Seleccionar plan</a></button>
             </div>
-            <div class="plan3"><a href="registrarse.html" class="btn-plan"><button class="btn-plan inicio-sesion">Seleccionar plan</a></button>
+            <div class="plan3"><a href="home.html" class="btn-plan"><button class="btn-plan inicio-sesion">Seleccionar plan</a></button>
             </div>
-            <div class="plan4"><a href="registrarse.html" class="btn-plan"><button class="btn-plan inicio-sesion">Seleccionar plan</a></button>
+            <div class="plan4"><a href="home.html" class="btn-plan"><button class="btn-plan inicio-sesion">Seleccionar plan</a></button>
             </div>
         </section>
 
