--- a/TPE5-diazpace_molleker_lucero/html/comentarios.html
+++ b/TPE5-diazpace_molleker_lucero/html/comentarios.html
@@ -13,11 +13,7 @@
 </head>
 <body>
     <header class="navegation">
-<<<<<<< HEAD
         <a href="home.html" class="logo-navigation"></a>
-=======
-        <a href="home.html"  class="logo-navigation"></a>
->>>>>>> 84f6cb9d4fc987343ec7464005c5c688a995a595
         <input type="text" placeholder="  Buscar..." class="search">
         <a href="buscado.html"><div class="lupa"></div></a>
 
@@ -44,10 +40,12 @@
                 <button id="btn-descartar-datos" ><a id="descartar" href="home.html">Descartar</a></button>
                 <button id="btn-modificar-datos" > <a href="home.html">Enviar</a></button>
             </div>
-            <div id="actualizar-plan">
-                <p id="actualiza"> Accedé a más beneficios!</p>
-                <button id="btn-act-plan" > <a href="">Actualizá tu plan</a> </button>
-            </div>
+            <form class="flex">
+                <div id="actualizar-plan-notific">
+                    <p id="actualiza"> Accedé a más beneficios!</p>
+                    <button id="btn-act-plan" > <a href="actualizar-plan.html">Actualizá tu plan</a> </button>
+                </div>
+            </form>
         </form>
     </div>
 
