terminando link a paginas

--- a/TPE5-diazpace_molleker_lucero/html/artista.html
+++ b/TPE5-diazpace_molleker_lucero/html/artista.html
@@ -22,8 +22,8 @@
     </header>
     <section class="content">
         <section class="sugerencias">
-            <div class="back"></div>
-            <h1>Artista:  Queen</h1>
+        <!-- back--><a href="home.html" class="back"></a>
+        <h1>Artista:  Queen</h1>
         </section>
 
         <section class="music-content border swing-in-top-fwd">
