--- a/TPE5-diazpace_molleker_lucero/html/home.html
+++ b/TPE5-diazpace_molleker_lucero/html/home.html
@@ -27,30 +27,30 @@
         <section class="music-sections">
             <h3>Artistas</h3>
             <section class="music-content">
-                <div class="cont-music">
+                <a href="artista.html"><div class="cont-music">
                     <div class="artist artist1"></div>
                     <p class="name">Queen</p>
-                </div>
-                <div class="cont-music">
+                </div></a>
+                <a href="artista.html"><div class="cont-music">
                     <div class="artist artist2"></div>
                     <p class="name">Michael Jackson</p>
-                </div>
-                <div class="cont-music">
+                </div></a>
+                <a href="artista.html"><div class="cont-music">
                     <div class="artist artist3"></div>
                     <p class="name">Maluma</p>
-                </div>
-                <div class="cont-music">
+                </div></a>
+                <a href="artista.html"><div class="cont-music">
                     <div class="artist artist4"></div>
                     <p class="name">Freddy Mercury</p>
-                </div>
-                <div class="cont-music">
+                </div></a>
+                <a href="artista.html"><div class="cont-music">
                     <div class="artist artist5"></div>
                     <p class="name">Pink Floyd</p>
-                </div>
-                <div class="cont-music">
+                </div></a>
+                <a href="artista.html"><div class="cont-music">
                     <div class="artist artist6"></div>
                     <p class="name">Cacho Castaña</p>
-                </div>
+                </div></a>
 <!--                 <div class="artist artist3"></div>
                 <div class="artist artist4"></div>
                 <div class="artist artist5"></div>
@@ -60,30 +60,30 @@
         <section class="music-sections">
             <h3>Más escuchado</h3>
             <section class="music-content">
-                <div class="cont-music">
+                <a href="cancion.html"><div class="cont-music">
                     <div class="songs song1"></div>
-                    <p class="name">Queen</p>
-                </div>
-                <div class="cont-music">
+                    <p class="name">Cancion</p>
+                </div></a>
+                <a href="cancion.html"><div class="cont-music">
                     <div class="songs song2"></div>
-                    <p class="name">Pink Floyd</p>
-                </div>
-                <div class="cont-music">
+                    <p class="name">Cancion</p>
+                </div></a>
+                <a href="cancion.html"><div class="cont-music">
                     <div class="songs song3"></div>
-                    <p class="name">Freddy Mercury</p>
-                </div>
-                <div class="cont-music">
+                    <p class="name">Cancion</p>
+                </div></a>
+                <a href="cancion.html"><div class="cont-music">
                     <div class="songs song4"></div>
-                    <p class="name">Cacho Castaña</p>
-                </div>
-                <div class="cont-music">
+                    <p class="name">Cancion</p>
+                </div></a>
+                <a href="cancion.html"><div class="cont-music">
                     <div class="songs song5"></div>
-                    <p class="name">Michael Jackson</p>
-                </div>
-                <div class="cont-music">
+                    <p class="name">Cancion</p>
+                </div></a>
+                <a href="cancion.html"><div class="cont-music">
                     <div class="songs song1"></div>
-                    <p class="name">Cacho Castaña</p>
-                </div>
+                    <p class="name">Cancion</p>
+                </div></a>
 <!--                 <div class="songs song1"></div>
                 <div class="songs song2"></div>
                 <div class="songs song3"></div>
@@ -94,31 +94,32 @@
         </section>
         <section class="music-sections">
             <h3>Lo nuevo</h3>
-            <section class="music-content">
-                <div class="cont-music">
+                <section class="music-content">
+
+                <a href="playlist.html"><div class="cont-music">
                     <div class="songs song1"></div>
                     <p class="name">Queen</p>
-                </div>
-                <div class="cont-music">
+                </div></a>
+                <a href="playlist.html"> <div class="cont-music">
                     <div class="songs song2"></div>
                     <p class="name">Pink Floyd</p>
-                </div>
-                <div class="cont-music">
+                </div></a>
+                <a href="playlist.html"><div class="cont-music">
                     <div class="songs song3"></div>
                     <p class="name">Freddy Mercury</p>
-                </div>
-                <div class="cont-music">
+                </div></a>
+                <a href="playlist.html"> <div class="cont-music">
                     <div class="songs song4"></div>
                     <p class="name">Cacho Castaña</p>
-                </div>
-                <div class="cont-music">
+                </div></a>
+                <a href="playlist.html"><div class="cont-music">
                     <div class="songs song5"></div>
                     <p class="name">Michael Jackson</p>
-                </div>
-                <div class="cont-music">
+                </div></a>
+                <a href="playlist.html"> <div class="cont-music">
                     <div class="songs song1"></div>
                     <p class="name">Cacho Castaña</p>
-                </div>
+                </div></a>
 <!--                 <div class="songs song1"></div>
                 <div class="songs song2"></div>
                 <div class="songs song3"></div>
@@ -130,30 +131,30 @@
         <section class="music-sections">
             <h3>Playlist</h3>
             <section class="music-content">
-                <div class="cont-music">
+                <a href="playlist.html"> <div class="cont-music">
                     <div class="songs song1"></div>
                     <p class="name">Queen</p>
-                </div>
-                <div class="cont-music">
+                </div></a>
+                <a href="playlist.html"><div class="cont-music">
                     <div class="songs song2"></div>
                     <p class="name">Pink Floyd</p>
-                </div>
-                <div class="cont-music">
+                </div></a>
+                <a href="playlist.html"><div class="cont-music">
                     <div class="songs song3"></div>
                     <p class="name">Freddy Mercury</p>
-                </div>
-                <div class="cont-music">
+                </div></a>
+                <a href="playlist.html"> <div class="cont-music">
                     <div class="songs song4"></div>
                     <p class="name">Cacho Castaña</p>
-                </div>
-                <div class="cont-music">
+                </div></a>
+                <a href="playlist.html"><div class="cont-music">
                     <div class="songs song5"></div>
                     <p class="name">Michael Jackson</p>
-                </div>
-                <div class="cont-music">
+                </div></a>
+                <a href="playlist.html"><div class="cont-music">
                     <div class="songs song1"></div>
                     <p class="name">Cacho Castaña</p>
-                </div>
+                </div></a>
 <!--                 <div class="songs song1"></div>
                 <div class="songs song2"></div>
                 <div class="songs song3"></div>
@@ -165,30 +166,30 @@
         <section class="music-sections">
             <h3>Podcast</h3>
             <section class="music-content">
-                <div class="cont-music">
+                <a href="playlist.html"><div class="cont-music">
                     <div class="songs song1"></div>
                     <p class="name">Queen</p>
-                </div>
-                <div class="cont-music">
+                </div></a>
+                <a href="playlist.html"><div class="cont-music">
                     <div class="songs song2"></div>
                     <p class="name">Pink Floyd</p>
-                </div>
-                <div class="cont-music">
+                </div></a>
+                <a href="playlist.html"><div class="cont-music">
                     <div class="songs song3"></div>
                     <p class="name">Freddy Mercury</p>
-                </div>
-                <div class="cont-music">
+                </div></a>
+                <a href="playlist.html"> <div class="cont-music">
                     <div class="songs song4"></div>
                     <p class="name">Cacho Castaña</p>
-                </div>
-                <div class="cont-music">
+                </div></a>
+                <a href="playlist.html"><div class="cont-music">
                     <div class="songs song5"></div>
                     <p class="name">Michael Jackson</p>
-                </div>
-                <div class="cont-music">
+                </div></a>
+                <a href="playlist.html"><div class="cont-music">
                     <div class="songs song1"></div>
                     <p class="name">Cacho Castaña</p>
-                </div>
+                </div></a>
 <!--                 <div class="songs song1"></div>
                 <div class="songs song2"></div>
                 <div class="songs song3"></div>
@@ -199,31 +200,32 @@
         </section>
         <section class="music-sections">
             <h3>Para estudiar</h3>
-            <section class="music-content">
-                <div class="cont-music">
+                <section class="music-content">
+                    
+                <a href="playlist.html"><div class="cont-music">
                     <div class="songs song1"></div>
                     <p class="name">Queen</p>
-                </div>
-                <div class="cont-music">
+                </div></a>
+                <a href="playlist.html"><div class="cont-music">
                     <div class="songs song2"></div>
                     <p class="name">Pink Floyd</p>
-                </div>
-                <div class="cont-music">
+                </div></a>
+                <a href="playlist.html"><div class="cont-music">
                     <div class="songs song3"></div>
                     <p class="name">Freddy Mercury</p>
-                </div>
-                <div class="cont-music">
+                </div></a>
+                <a href="playlist.html"><div class="cont-music">
                     <div class="songs song4"></div>
                     <p class="name">Cacho Castaña</p>
-                </div>
-                <div class="cont-music">
+                </div></a>
+                <a href="playlist.html"><div class="cont-music">
                     <div class="songs song5"></div>
                     <p class="name">Michael Jackson</p>
-                </div>
-                <div class="cont-music">
+                </div></a>
+                <a href="playlist.html"><div class="cont-music">
                     <div class="songs song1"></div>
                     <p class="name">Cacho Castaña</p>
-                </div>
+                </div></a>
 <!--                 <div class="songs song1"></div>
                 <div class="songs song2"></div>
                 <div class="songs song3"></div>
@@ -235,30 +237,30 @@
         <section class="music-sections">
             <h3>Para entrenar</h3>
             <section class="music-content">
-                <div class="cont-music">
+                <a href="playlist.html"><div class="cont-music">
                     <div class="songs song1"></div>
                     <p class="name">Queen</p>
-                </div>
-                <div class="cont-music">
+                </div></a>
+                <a href="playlist.html"><div class="cont-music">
                     <div class="songs song2"></div>
                     <p class="name">Pink Floyd</p>
-                </div>
-                <div class="cont-music">
+                </div></a>
+                <a href="playlist.html"><div class="cont-music">
                     <div class="songs song3"></div>
                     <p class="name">Freddy Mercury</p>
-                </div>
-                <div class="cont-music">
+                </div></a>
+                <a href="playlist.html"><div class="cont-music">
                     <div class="songs song4"></div>
                     <p class="name">Cacho Castaña</p>
-                </div>
-                <div class="cont-music">
+                </div></a>
+                <a href="playlist.html"><div class="cont-music">
                     <div class="songs song5"></div>
                     <p class="name">Michael Jackson</p>
-                </div>
-                <div class="cont-music">
+                </div></a>
+                <a href="playlist.html"><div class="cont-music">
                     <div class="songs song1"></div>
                     <p class="name">Cacho Castaña</p>
-                </div>
+                </div></a>
 <!--                 <div class="songs song1"></div>
                 <div class="songs song2"></div>
                 <div class="songs song3"></div>
