agregamos animacion del home

--- a/TPE5-diazpace_molleker_lucero/html/home.html
+++ b/TPE5-diazpace_molleker_lucero/html/home.html
@@ -24,7 +24,7 @@
             <!--<div class="back"></div>-->
             <h1>Sugerencias</h1>
         </section>
-        <section class="music-sections">
+        <section class="music-sections swing-in-top-fwd">
             <h3>Artistas</h3>
             <section class="music-content">
                 <a href="artista.html"><div class="cont-music">
@@ -57,7 +57,7 @@
                 <div class="artist artist6"></div> -->
             </section>
         </section>
-        <section class="music-sections">
+        <section class="music-sections swing-in-top-fwd">
             <h3>Más escuchado</h3>
             <section class="music-content">
                 <a href="cancion.html"><div class="cont-music">
@@ -92,7 +92,7 @@
                 <div class="songs song6"></div> -->
             </section>
         </section>
-        <section class="music-sections">
+        <section class="music-sections swing-in-top-fwd">
             <h3>Lo nuevo</h3>
                 <section class="music-content">
 
@@ -128,7 +128,7 @@
                 <div class="songs song6"></div> -->
             </section>
         </section>
-        <section class="music-sections">
+        <section class="music-sections swing-in-top-fwd">
             <h3>Playlist</h3>
             <section class="music-content">
                 <a href="playlist.html"> <div class="cont-music">
@@ -163,7 +163,7 @@
                 <div class="songs song6"></div> -->
             </section>
         </section>
-        <section class="music-sections">
+        <section class="music-sections swing-in-top-fwd">
             <h3>Podcast</h3>
             <section class="music-content">
                 <a href="playlist.html"><div class="cont-music">
@@ -198,10 +198,10 @@
                 <div class="songs song6"></div> -->
             </section>
         </section>
-        <section class="music-sections">
+        <section class="music-sections swing-in-top-fwd">
             <h3>Para estudiar</h3>
                 <section class="music-content">
-                    
+
                 <a href="playlist.html"><div class="cont-music">
                     <div class="songs song1"></div>
                     <p class="name">Queen</p>
@@ -234,7 +234,7 @@
                 <div class="songs song6"></div> -->
             </section>
         </section>
-        <section class="music-sections">
+        <section class="music-sections swing-in-top-fwd">
             <h3>Para entrenar</h3>
             <section class="music-content">
                 <a href="playlist.html"><div class="cont-music">
