--- a/TPE5-diazpace_molleker_lucero/html/artista.html
+++ b/TPE5-diazpace_molleker_lucero/html/artista.html
@@ -151,7 +151,22 @@
     </section>
     <div class="mas-canciones"></div>
     <div class="espacio-blanco"></div>
-    <section class="player">
+
+   <section class="pie">
+        <!-- <section class="player"> 
+           <section class="artista">
+                <a href=""><h1>Michael Jackson </h1></a> 
+                <a href=""><p class="span"> - Smooth Criminal</p></a>        
+            </section> 
+        </section>-->
+        <section  class="artista">
+
+            <audio controls="controls" class="barra">
+                <source src="/audio/Smooth Criminal.mp3" type="audio/mp3" />
+            </audio>
+        </section>         
+        
+    </section>
             
     </section>
     <script src="../js/puntuacion.js"></script>
